@@ -102,6 +102,7 @@ void summonCommandsInit()
     RegisterScriptCommand(GetWindowPositionCommand) v() gl()          
     RegisterScriptCommand(SetWindowSizeCommand)     v() gl()
     RegisterScriptCommand(GetWindowSizeCommand)     v()
+    RegisterScriptCommand(RaiseWindowCommand)       v() gl()
     RegisterScriptCommand(SetTransCommand)          v() gl()
     RegisterScriptCommand(GetTransCommand)          v()
     RegisterScriptCommand(SetZoomCommand)           v() gl()
